# prototype

./: CMakeLists.txt  README.md  conanfile.txt
lib/: CMakeLists.txt
lib/boost/include/boost/: CMakeLists.txt
prototype/: main.cpp
prototype.xcodeproj/: project.pbxproj
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.h  main.cpp  measure.h
src/common/: CMakeLists.txt  capacitor.h  measure.h  protocol.h  receiver.h
src/message/: CMakeLists.txt  factory.h  id.h  nssso_string.h  ping.h  pong.h  reply.h  request.h
src/serialization/: CMakeLists.txt  serializer.h
src/server/: CMakeLists.txt  server.cpp  server.h
